# modul

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: modul-workflow.yaml
docs/: index.html  main_loop.html
src/: audio_model.rs  beat_controller.rs  bypass.rs  egui_view.rs  envelope.rs  graphics.rs  main.rs  miniquad_view.rs  modul.rs  modul_cpal.rs  modul_second.rs  modul_utils.rs  nannou_view.rs  record.rs  recorder.rs  tape.rs  traits.rs  wave.rs
src/app/: mod.rs
src/app/view/: mod.rs  window_tapes.rs
src/app/visualization/shaders/: color.frag
src/app/windows/: mod.rs  window_stats.rs
src/core/: audio_model.rs  mod.rs  modul.rs  modul_utils.rs  utils.rs  view_time.rs
src/features/: metronome.rs  mod.rs  tape.rs
src/metronome/: mod.rs
src/nannou_view/: mod.rs
src/obsolete/: bypass.rs  modul.rs  recorder.rs
src/tape/: mod.rs  tape.rs  tape_view.rs
src/view/: camera.rs  egui_view.rs  fragment.cg  fragment.frag  mod.rs  quad.rs  scene.rs  scene2.rs  scene3.rs  stage.rs  vertex.cg  view.rs
src/view/shaders/: box.frag  color.frag  vertex.vert
src/view/visualization/: cube.rs  material.rs  mod.rs  object.rs  quad.rs  sphere.rs
src/view/visualization/shaders/: blobs.frag  blobs_2.frag  color_bar.frag  debug_color.frag  fragment.frag  fragment_four.frag  sdf_box.frag  sdf_circle.frag  sdf_eye.frag  sdf_eye_2.frag  texture.frag  uv_visual.frag  vertex.vert
src/view/windows/: mod.rs  window_controls.rs  window_log.rs  window_metronome.rs  window_settings.rs  window_stats.rs  window_tapes.rs  windows.rs
src/winit_view/: app.rs  gui.rs  lib.rs  mod.rs  renderer.rs  view.rs
src/winit_view/primitives/: object.rs  quad.rs
src/winit_view/shaders/: basic_vertex.wgsl  rt.wgsl  rt2.wgsl  six_vertex.wgsl
src/winit_view/windows/: window_controls.rs  window_log.rs  window_metronome.rs  window_stats.rs
