[package]
name = "modul"
version = "0.1.0"
authors = ["zehreken <zehreken@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
hound = "3.4.0"
ringbuf = "0.3"
cpal = "0.14"
array-init = "2.0.0"
miniquad = { version = "=0.3.13" }
egui-miniquad = "0.12.0"
egui = { version = "0.19", features = ["bytemuck"] }
image = "0.24.2"
copypasta = "0.8.1"
glam = "0.22"
# https://github.com/not-fl3/miniquad/issues/172
[target.'cfg(target_os = "macos")'.dependencies]