[package]
name = "modul"
version = "0.0.3"
authors = ["zehreken <zehreken@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
hound = "3.4.0"
ringbuf = "0.3"
cpal = "0.15"
array-init = "2.0.0"
miniquad = { version = "=0.3.15" }
egui-miniquad = "0.13.0"
egui = { version = "0.20", features = ["bytemuck"] }
image = "0.24.2"
copypasta = "0.8.1"
glam = "0.24"
colored = "2.0.0"
# migration to winit-wgpu-egui
winit = "0.28"
wgpu = "0.17"
pollster = "0.3"
bytemuck = { version = "1.12", features = ["derive"] }
egui-wgpu = "0.23"
egui-winit = "0.23"
# https://github.com/not-fl3/miniquad/issues/172
[target.'cfg(target_os = "macos")'.dependencies]